<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">Settings</string>
    <string name="app_name">Edibles</string>

    <!-- Create Activity -->
    <string name="title_activity_create">CreateActivity</string>
    <string name="create_account_title">Create Account</string>
    <!--
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    -->
    <string name="confirm_password_text">Confirm Password</string>
    <string name="email_text">Email</string>
    <string name="remember_me">Remember Me?</string>
    <string name="cancel_create_account">Cancel</string>
    <string name="submit_create_account">Submit</string>

    <!-- Log In Activity -->
    <string name="log_in_title">Log In</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="skip_log_in_button">Skip Log In</string>
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="create_account_button">Create Account</string>
    <string name="exit_application_button">Exit</string>

    <!-- Main Menu Activity -->
    <string name="main_menu_title">Main Menu</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="find_restaurants_button">Find Restaurants</string>
    <string name="manage_friends_button">Manage Friends</string>
    <string name="manage_account_button">Manage Account</string>
    <string name="log_out_button">Logout</string>

    <!-- Find Restaurants Activity -->
    <string name="find_restaurants_title">Find Restaurants</string>
    <string name="title_activity_find_restaurants">FindRestaurantsActivity</string>
    <string name="name_keyword_text">Name/Keyword</string>
    <string name="zip_code_text">Zip code(optional)</string>
    <string name="search_nearby_button">Search Nearby</string>
    <string name="search_button">Search</string>

    <!-- Manage Friends Activity -->
    <string name="title_activity_manage_friends">ManageFriendsActivity</string>
    <string name="manage_friends_title">Manage Friends</string>
    <string name="show_friends">Show Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="view_notifications">View Notifications</string>

    <!-- Restaurant Activity -->
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="restaurant_name_text">[Restaurant Name]</string>
    <string name="restaurant_address_text">[Restaurant Address]</string>
    <string name="restaurant_phone_number_text">[Restaurant Phone Number]</string>
    <string name="view_map_button">View Map</string>
    <string name="read_reviews_button">Read Reviews</string>
    <string name="write_reviews_button">Write Reviews</string>
    <string name="check_in_button">Check In</string>

    <!-- Write Review Activity -->
    <string name="title_activity_write_review">WriteReviewActivity</string>
    <string name="taste_rating_text">Taste</string>
    <string name="service_rating_text">Service</string>
    <string name="cleanliness_rating_text">Cleanliness</string>
    <string name="overall_rating_text">Overall</string>

    <!--
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="restaurant_name_text">[Restaurant Name]</string>
    <string name="restaurant_address_text">[Restaurant Address]</string>
    -->
    <string name="review_text">Review</string>
    <string name="chars_left_text">200 characters remaining</string>
    <string name="add_picture_button">Add Picture</string>
    <string name="submit_review_button">Submit Review</string>
    <string name="post_to_facebook_button">Post to Facebook</string>

    <!-- Read Review Activity -->
    <string name="title_activity_read_review">ReadReviewActivity</string>
    <!--
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="restaurant_name_text">[Restaurant Name]</string>
    <string name="restaurant_address_text">[Restaurant Address]</string>
    -->
    <!-- List Restaurants Activity -->
    <string name="title_activity_list_restaurants">ListRestaurantsActivity</string>
    <string name="restaurants_list_title">Restaurants List</string>

    <!-- Current Friends Activity -->
    <string name="title_activity_current_friends">CurrentFriendsActivity</string>
    <string name="current_friends_title">Current Friends</string>

    <!-- Friend Activity -->
    <string name="title_activity_friend">FriendActivity</string>
    <string name="friend_text">[Friend Name]</string>
    <string name="delete_friend_button">Delete Friend</string>
    <string name="message_friend_button">Message Friend</string>

    <!-- Find Friend Activity -->
    <string name="title_activity_find_friend">FindFriendActivity</string>
    <string name="find_friend_text">Find Friend</string>
    <string name="username_search_text">Username</string>
    <!-- <string name="search_button">Search</string> -->


    <!-- Notification Activity -->
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="notifications_title">Notifications</string>

    <!-- Manage Account Activity -->
    <string name="title_activity_manage_account">ManageAccountActivity</string>
    <string name="manage_account_title">Manage Account</string>
    <string name="new_password_text">New Password</string>
    <string name="new_password_confirm_text">Confirm Password</string>
    <string name="update_password_button">Update Password</string>

    <!-- Add Picture Activity -->
    <string name="title_activity_add_picture">AddPictureActivity</string>
    <string name="add_picture_title">Add Picture</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="browse_images_button">Browse Images</string>
    <string name="attach_image_button">Attach Image</string>
    <string name="imageview_desc">Insert Image</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>

    <!-- Forgot Password Activity -->
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="submit_button">Submit</string>
    <!-- <string name="email_text">Email</string> -->
    <string name="title_activity_create_message">CreateMessage</string>
    <string name="action_settings">Settings</string>
    <string name="send_message_to_">Send Message To:</string>
    <string name="messagename">MessageName</string>
    <string name="message_text">message_Text</string>
    <string name="send_message">Send Message</string>
    <string name="hello_world">Hello world!</string>

    <!-- Create Message Activity -->
    <string name="create_message_title">Create Message</string>
    <string name="compose_message_text">Compose Message</string>
    <string name="cancel_message_button">Cancel</string>
    <string name="send_message_button">Send Message</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="title_activity_review_details">ReviewDetailsActivity</string>
    <string name="friend_requests_title">Friend Requests</string>
    <string name="or_text">OR</string>
    <string name="new_email_text">New Email</string>
    <string name="new_email_confirm_text">Confirm Email</string>

</resources>