<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".WriteReviewActivity" >

    <TextView
       android:id="@+id/RestaurantNameText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_name_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
   
   <TextView
       android:id="@+id/RestaurantAddressText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_address_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
  
    <TextView
       android:id="@+id/restaurantPhoneNumberText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_phone_number_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
  
    <EditText
        android:id="@+id/reviewText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5"
        android:padding="4dp"
        android:text="@string/review_text"
        android:textColor="#888888" >
    </EditText>
    
   	<Button
        android:id="@+id/AddPictureButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_picture_button">
    </Button>

    <Button
        android:id="@+id/submitReviewButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_review_button">
   	</Button>

    <Button
        android:id="@+id/postToFacebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_to_facebook_button">
   	</Button>
   	
</LinearLayout>