<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".RestaurantActivity" >
  
    <TextView
       android:id="@+id/reviewRestaurantName"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_name_text"
       android:gravity="center"
       android:padding="4dp"
       android:textSize="20sp">      
   </TextView> 
   
   <TextView
       android:id="@+id/reviewRestaurantAddressText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_address_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
  
    <TextView
       android:id="@+id/reviewPhoneNumber"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_phone_number_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
   
   <Button
       android:id="@+id/MapButton"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:padding="4dp"
       android:text="@string/view_map_button"
       android:onClick="viewMapButtonHandler">
	</Button>
	
    <Button
        android:id="@+id/readReviewsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/read_reviews_button"
        android:onClick="readReviewsButtonHandler">

	</Button>
	
	<Button
	    android:id="@+id/writeReviewsButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="4dp"
	    android:text="@string/write_reviews_button"
	    android:onClick="writeReviewsButtonHandler">

	</Button>
	
    <Button
        android:id="@+id/checkInButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/check_in_button"
        android:onClick="checkInButtonHandler">

	</Button>
	
</LinearLayout>