<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".AddPictureActivity" >

    <TextView
        android:id="@+id/addPictureTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/add_picture_title">
    </TextView>
    
    <Button
	    android:id="@+id/takePictureButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:padding="4dp"
	    android:text="@string/take_picture_button"
	    android:onClick="takePictureButtonHandler">
	</Button>
	    
	<Button 
        android:id="@+id/browseImagesButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/browse_images_button"
        android:onClick="browseImagesButtonHandler">
	</Button>
	
	<ImageView
	    android:id="@+id/displayImageView"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:contentDescription="@string/imageview_desc"
	    android:padding="4dp" >
	</ImageView>
	    
	<Button 
        android:id="@+id/attachImageButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/attach_image_button"
        android:onClick="attachImageButtonHandler">
	</Button>
    
</LinearLayout>