<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dp"
	    tools:context=".ManageAccountActivity" >
	
	    <TextView
	        android:id="@+id/manageAccountTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="8dp"
	        android:textSize="20sp"
	        android:text="@string/manage_account_title"
	        android:textColor="#FFFFFF">
	    </TextView>
	    
	    <EditText
	        android:id="@+id/usernameText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/username_text"
	        android:inputType="text"
	        android:padding="4dp">
	    </EditText>
	    
	    <EditText
	        android:id="@+id/oldPasswordText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:hint="@string/password_text"
	        android:padding="4dp">
	    </EditText>
	    
	    <EditText
	        android:id="@+id/newPasswordText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/new_password_text"
	        android:inputType="textPassword"
	        android:padding="4dp">
	    </EditText>
	    
	    <EditText
	        android:id="@+id/newPasswordConfirmText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/new_password_confirm_text"
	        android:inputType="textPassword"
	        android:padding="4dp">
	    </EditText>
	
<!-- need update password button -->
<!-- 		<ImageButton -->
<!-- 		    android:id="@+id/updatePasswordButton" -->
<!-- 		    android:layout_width="fill_parent" -->
<!-- 		    android:layout_height="45dp" -->
<!-- 		    android:onClick="updatePasswordButtonHandler" -->
<!-- 		    android:src="@drawable/update_password_button" -->
<!-- 		    android:padding="4dp" -->
<!-- 		    android:scaleType="fitXY" -->
<!-- 			android:layout_gravity="center" -->
<!-- 			android:background="@null"> -->
<!-- 		</ImageButton> -->
	    
		<Button
	        android:id="@+id/updatePasswordButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
			android:padding="4dp"
	       	android:text="@string/update_password_button"
	       	android:onClick="updatePasswordButtonHandler">
		</Button>
	    
	</LinearLayout>
</ScrollView>