<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".CreateActivity">

   <TextView
       android:id="@+id/CreateMessageTitle"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/create_message_title"
       android:padding="4dp"
       android:gravity="center">      
   </TextView>
	    
   <EditText
       android:id="@+id/messageText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:inputType="textMultiLine"
       android:lines="10" 
       android:gravity="left"
       android:hint="@string/compose_message_text"
       android:padding="4dp">
   </EditText>
	   
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
	   
	   <Button
	       android:id="@+id/cancelMessageButton"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/cancel_message_button"
	       android:onClick="cancelAccountButtonHandler"
	       android:layout_weight="1"
	       android:padding="4dp">
	   </Button>
	    
	   <Button
	       android:id="@+id/sendMessageButton"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:onClick="sendMessageAccountHandler"
	       android:text="@string/send_message_button" 
	       android:layout_weight="1"
	       android:padding="4dp">
   		
	   </Button>

	</LinearLayout>
	
</LinearLayout>
