<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotPasswordTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/forgot_password_title">
    </TextView>
    
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:padding="4dp">
    </EditText>

	<Button
        android:id="@+id/logOut"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:padding="4dp"
       	android:text="@string/submit_button"
       	android:onClick="submitPasswordRetrieveButtonHandler">
	</Button>
    
</LinearLayout>