<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context=".ReadReviewActivity" >
        
    <TextView
       android:id="@+id/RestaurantNameText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_name_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
   
   <TextView
       android:id="@+id/RestaurantAddressText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_address_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
  
    <TextView
       android:id="@+id/restaurantPhoneNumberText"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/restaurant_phone_number_text"
       android:gravity="center"
       android:padding="4dp">      
   </TextView> 
	      
   <ListView
       android:id="@+id/reviewsList"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:padding="4dp">
   </ListView>
   
</LinearLayout>