<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dp"
	    tools:context=".CreateActivity">
	
	   <TextView
	       android:id="@+id/createAccountTitle"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/create_account_title"
	       android:padding="8dp"
	       android:textSize="20sp"
	       android:gravity="center"
	       android:textColor="#FFFFFF">      
	   </TextView> 
	    
	   <EditText 
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:gravity="left"
	       android:inputType="text"
	       android:id="@+id/usernameText"
	       android:hint="@string/username_text"
	       android:padding="4dp"
	       android:textColor="#888888">
		</EditText> 
	    
	   <EditText
	       android:id="@+id/passwordText"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:gravity="left"
	       android:inputType="textPassword"
	       android:hint="@string/password_text"
	       android:padding="4dp"
	       android:textColor="#888888" >
	
		</EditText>
	    
	   <EditText
	       android:id="@+id/confirmPasswordText"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:gravity="left"
	       android:inputType="textPassword"
	       android:hint="@string/confirm_password_text"
	       android:padding="4dp"
	       android:textColor="#888888" >
	
		</EditText>
		    
	   <EditText
	       android:id="@+id/emailText"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:inputType="textEmailAddress" 
	       android:gravity="left"
	       android:hint="@string/email_text"
	       android:padding="4dp"
	       android:textColor="#888888">
	   </EditText>
		   
	   <LinearLayout
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal">
	       
	       <CheckBox 
		       android:id="@+id/loginPersist"
		       android:layout_width="wrap_content"
		       android:layout_height="fill_parent"
		       android:text="@string/remember_me">
		   </CheckBox>
		   
	       <LinearLayout
	           android:layout_width="fill_parent"
	       	   android:layout_height="wrap_content"
	           android:orientation="vertical">
	           
			   <ImageButton
			       android:id="@+id/CancelCreateAccountButton"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:src="@drawable/cancel_button"
			       android:onClick="cancelAccountButtonHandler"
			       android:layout_weight="1"
			       android:padding="4dp"
			       android:scaleType="fitXY"
			       android:layout_gravity="center"
			       android:background="@null">
			   </ImageButton>
			    
			   <ImageButton
			       android:id="@+id/SubmitCreateAccountButton"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:src="@drawable/submit_button"
			       android:onClick="submitCreateAccountHandler"
			       android:layout_weight="1"
			       android:padding="4dp"
			       android:scaleType="fitXY"
			       android:layout_gravity="center"
			       android:background="@null">
			    </ImageButton>
			    
			</LinearLayout>
	
		</LinearLayout>
		
	</LinearLayout>

</ScrollView>