<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="6dp"
	    tools:context=".FindRestaurantsActivity">
	
	    <TextView
	        android:id="@+id/findRestaurantsTitle"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="8dp"
	        android:textSize="20sp"
	        android:text="@string/find_restaurants_title"
	        android:textColor="#FFFFFF">
	    </TextView>
	    
	    <EditText
	        android:id="@+id/keywordText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/name_keyword_text"
	        android:inputType="text"
	        android:padding="4dp"
	        android:textColor="#888888">
	    </EditText>
	    
	    <EditText
	        android:id="@+id/zipCodeText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:hint="@string/zip_code_text"
	        android:padding="4dp"
	        android:textColor="#888888">
	    </EditText>
	        
	    <ImageButton
	        android:id="@+id/searchNearby"
	        android:layout_width="fill_parent"
	        android:layout_height="45dp"
	        android:padding="4dp"
	        android:src="@drawable/search_nearby_button"
	        android:onClick="searchNearbyButtonHandler"
	        android:scaleType="fitXY"
			android:layout_gravity="center"
			android:background="@null">
	
		</ImageButton>
	    
	    <ImageButton
		    android:id="@+id/searchButton"
		    android:layout_width="fill_parent"
		    android:layout_height="45dp"
		    android:onClick="searchButtonHandler"
		    android:src="@drawable/search_button"
		    android:padding="4dp"
		    android:scaleType="fitXY"
			android:layout_gravity="center"
			android:background="@null">
		</ImageButton>
	    
	</LinearLayout>
</ScrollView>